# bdhs-bounds-2023

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  pyproject.toml  test.pl
finished-code/: code-json-prolog-improved.py  code-output-excel.py  pancake_july17.xlsx
finished-code/Henry's json files/: 3_pancake_search_data.json  4_pancake_search_data.json  5_pancake_search_data.json
finished-code/Pat's code/: final_nbs_auto.pl  final_new_auto.pl  mike_file.pl  run_pancake3.sh
finished-code/Pat's code/Mike's code/: code-mike-output-to-csv.py  run_mike.sh
finished-code/Pat's csv output/: pancake3_f2e_nbs_excel_July16.csv  pancake3_f2e_new_excel_July16.csv  pancake3_f2f_nbs_excel_July16.csv  pancake3_f2f_new_excel_July16.csv  pancake3_vidal_nbs_excel_July16.csv  pancake3_vidal_new_excel_July16.csv  pancake4_f2e_bdhs_excel_July16.csv  pancake4_f2e_nbs_excel_July16.csv  pancake4_f2f_bdhs_excel_July16.csv  pancake4_f2f_nbs_excel_July16.csv  pancake4_vidal_bdhs_excel_July16.csv  pancake4_vidal_nbs_excel_July16.csv
finished-code/Pat's json output/: final_pancake3_f2e_nbs_test_July13_final_json.txt  final_pancake3_f2e_new_test_July13_final_json.txt  final_pancake3_f2f_nbs_test_July13_final_json.txt  final_pancake3_f2f_new_test_July13_final_json.txt  final_pancake3_vidal_nbs_test_July13_final_json.txt  final_pancake3_vidal_new_test_July13_final_json.txt  final_pancake4_f2e_bdhs_test_July13_final_json_p21_stack_overflow.txt  final_pancake4_f2e_nbs_test_July13_final_json.txt  final_pancake4_f2f_bdhs_test_July13_final_json_p21_killed.txt  final_pancake4_f2f_nbs_test_July13_final_json.txt  final_pancake4_vidal_bdhs_test_July13_final_json_p21_stack_overflow.txt  final_pancake4_vidal_nbs_test_July13_final_json.txt
finished-code/Pat's prolog files/pancake3_new_prolog_files_f2e/: pancake3_p1f2e.pl  pancake3_p2f2e.pl  pancake3_p3f2e.pl  pancake3_p4f2e.pl  pancake3_p5f2e.pl
prolog/: final.pl  graph1.pl  lb_coverings.pl  orderings.pl  orderings2.pl  pats_rules.pl  problem1.pl  problem2.pl  problem3.pl  test.pl  test_problems.pl
prolog/problems/: p01.pl  p02.pl  p03.pl  p04.pl  p05.pl  p06.pl  p07.pl  p08.pl  p09.pl
python/pybound/: cli.py  schema.py  write_prolog.py
src/: lib.rs  main.rs  tile.rs
src/pybound/: cli.py  console.py  exceptions.py  generate_nodes.py  schema.py  utils.py
src/tile/: v1.rs
tile_puzzles/: EightPuzzle_0.txt  EightPuzzle_15.txt  EightPuzzle_3.txt  EightPuzzle_4.txt  EightPuzzle_5.txt
(+291 files in other folders)
