[tool.poetry]
name = "pybound"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pybound", from = "python"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = {extras = ["dotenv"], version = "^2.6"}
loguru = "^0.7"
alive-progress = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
hypothesis = "^6.8.0"
mypy = ">=0.971"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
ruff = "^0.0.257"
maturin = "^1.4"
seaborn = "^0.13.2"
matplotlib = "^3.8"
pandas = "^2.2"
polars = "^0.20"
numpy = "^1.26"


[tool.poetry.scripts]
bdhs = "pybound.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "python/pybound/__init__.py:__version__",
]


[tool.isort]
profile = "black"

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
line-length = 88
select = [
    'F',    # pyflakes
    'E',    # codestyle
    'W',    # warning
    'C90',  # complexity
    'N',    # pep-naming
    'UP',   # upgrade
    'S',    # bandit
    'B',    # bug-bear
    'A',    # builtins
    'C4',   # comprehensions
    'PIE',  # misc
    'ISC',  # literal concat
    'T20',  # print statements
    'PT',   # pytest
    'RET',  # returns
    'SIM',  # simplify
    'PTH',  # use pathlib
    'Q',    # quotes
    'PLR',  # refactor
    'PLE',  # pylint errors
]
ignore = [
    "B019",     # let's not worry about this.
    "B008",     # FastAPI does this standardly.
    "SIM108",   # Ternary not that clear (opinion!)
    "RET504",   # This seems broken to me.
    "S324",     # We're not using hashes for security.
]
unfixable = [
   "T20",  # Removes print statements
   "F841", # Removes unused variables
 ]

[tool.ruff.per-file-ignores]
# Ignore ALL init import errors.
"__init__.py" = ['F401']

# asserts and hard-coded values are fine in tests.
"tests/*.py" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.10"
show_error_codes = true
warn_unused_configs = true
disable_error_code = [
    "misc",  # This appears to give annoying errors about Generics.
    "annotation-unchecked", # This is just annoying.
]

[[tool.mypy.overrides]]
module = [
    "pybound.*",
    "alive_progress.*",
    "loguru.*",
    "pydantic.*",
]



